--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -29,7 +29,10 @@ a {
 a:visited, a:link, a:active {
   color: inherit;
 }
-
+.FullIMG{
+    width: inherit;
+    height: inherit;
+}
 h1, h2{
   
   font-size: 50px;
@@ -55,7 +58,8 @@ p{
   text-align: justify;
 
   color: white;
-
+    
+    margin-top: 15px; 
 }
 
 /* fontes */
@@ -382,399 +386,366 @@ p{
   }
 
 /* Modo Gráfico */
-
-  #ModoGraficoTexto {
-
+#ModoGrafico{
+    height: 600px;
+    width: 1300px;
+    background-color:  #2d2d5c; 
+}
+#ModoGraficoTexto {
     width: 30%;
-
     height: 500px;
-
     background-color: #2d2d5c;
-
     padding-left: 60px;
-
     padding-right: 60px;
-
     clear: both;
-
     float: left;
+}
 
-  }
 
-
-  #ModoGraficoTexto p{
-
+#ModoGraficoTexto p{
+    
     font-size: 25px;
+}
 
-  }
-
-    #ModoGraficoImagem{
-
-      width: 70%;
-
-      height: 500px;
-
-    background-color: chartreuse;
-
+#ModoGraficoImagem{
+    width: 900px;
+    height: 500px;
+/*  background-color: chartreuse;*/
     float: right;
-
-    }
+    text-align: center;
+}
+#ModoGraficoImagem img{
+    margin-top: 40px;
+    border-radius: 5px;
+    border: solid 3px;
+}
 
     /* Área de Trabalho */
-
-    #AreaDeTrabalho {
-
-      width: 30%;
-      height: 600px;
-      float: left;
-      padding-top: 25px;
-      margin-top: 10px;
-      background-color: #2d2d5c;
-
-    }
-
-    #AreaDeTrabalhoImagem {
-
-      height: 368px;
-      padding-top: 20px;
-      padding-bottom: 10px;
-
-    }
-
-      /* Trabalho com Janelas */
-
-      #TrabalhoComJanelas {
-
-        width: 40%;
-        height: 600px;
-        padding-top: 25px;
-        margin-top: 10px;
-        float: left;
-        background-color: #2d2d5c;
-
-      }
-
-
-      #JanelasImagem {
-
-        height: 438px;
-        padding-top: 50px;
-        padding-bottom: 10px;
-
-      }
-
-        /* Configuração do Sistema */
-
-        #ConfiguracaoDoSistema {
-
-          width: 30%;
-          height: 600px;
-          padding-top: 25px;
-          margin-top: 10px;
-          float: left;
-          background-color:  #2d2d5c;
-        }
-
-        #ConfiguracaoDoSistemaImagem {
-
-          height: 390px;
-          padding-bottom: 10px;
-          padding-top: 10px;
-        }
-
-          #FerramentasDoSistemaTexto {
-
-            width: 100%;
-            height: 100px;
-            padding-top: 15px;
-            background-color: #2d2d5c;
-            clear: both;
-
-          }
-
-            #FerramentasDoSistemaImagem {
-
-            width: 100%;
-            height: 500px;
-            background-color: mediumseagreen;
-
-
-          }
-
-            #Acessorios{
-
-              width: 45%;
-              height: 600px;
-              padding-top: 10px;
-              margin-top: 10px;
-              background-color: #2d2d5c;
-                float: left;
-
-            }
-
-            #Acessorios ul{
-
-
-              color: white;
-
-              list-style: none;
-
-              text-align: center;
-
-              font-family: arial;
-
-              font-size: 18px;
-
-
-            }
-
-            #AcessoriosImagem {
-
-              height: 315px;
-              width: 100%;
-              padding-top: 20px;
-
-            }
-
-            #MenuDeAjuda {
-
-              width: 55%;
-              height: 600px;
-              margin-top: 10px;
-              background-color: #2d2d5c;
-              float: right;
-            }
-
-          #MenuDeAjudaTexto{
-            padding-left: 15px;
-
-          }
-
-          #MenuDeAjudaTexto p{
-              text-align: left;
-            }
-
-          #MenuDeAjudaTexto h2{
-              text-align: left;
-            }
-
-
-
-            #MenuDeAjudaImagem {
-
-              height: 455px;
-              padding-top: 30px;
-
-            }
-
-            #GerenciamentoDeArquivos {
-
-              width: 20%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: #2d2d5c;
-              float: left;
-            }
-
-            #GerenciamentoDeArquivosImagem {
-
-              width:20%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: red;
-              float: left;
-
-
-            }
-
-
-            #UsuariosEPermissoes {
-
-              width: 60%;
-              height: 250px;
-              padding-left: 20px;
-              padding-right: 20px;
-              margin-top: 10px;
-              background-color: #2d2d5c;
-              float: right;
-            }
-
-            #UsuariosEPermissoes p, #UsuariosEPermissoes2 p{
-
-              font-size: 17px;
-
-            }
-
-            #UsuariosEPermissoes2 {
-
-              width: 35%;
-              height: 250px;
-              padding-top: 10px;
-              padding-left: 30px;
-              padding-right: 30px;
-              background-color: #2d2d5c;
-              float: left;
-
-            }
-
-            #UsuariosEPermissoesImagem {
-
-              float: right;
-              width: 25%;
-              height: 250px;
-
-            }
-
-            #InicializacaoFinalizacao {
-
-              width: 40%;
-              height: 500px;
-              padding-left: 40px;
-              padding-right: 40px;
-              padding-top: 10px;
-              margin-top: 10px;
-              background-color: #2d2d5c;
-              clear: both;
-              float: left;
-
-            }
-
-            #InstalacaoMaquinaVirtualImagem {
-
-              width: 25%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: blue;
-              float: left;
-
-            }
-
-
-
-            #InstalacaoMaquinaVirtual {
-
-              width: 35%;
-              height: 500px;
-              padding-left: 25px;
-              padding-right: 20px;
-              margin-top: 10px;
-              background-color:  #2d2d5c;
-              float: right;
-            }
-
-            #InstalacaoMaquinaVirtual p{
-
-              font-size: 16px;
-
-            }
-
-            #InstalacaoMaquinaVirtual ol{
-
-
-              color: white;
-
-              font-family: arial;
-
-
-            }
-
-            #InstalacaoMaquinaVirtual h2{
-
-              font-size: 28px;
-            }
-
-
-            #Pacotes{
-
-              width: 30%;
-              height: 500px;
-              background-color: #2d2d5c;
-              padding-left: 70px;
-              padding-right: 70px;
-              margin-top: 10px;
-              clear: both;
-              float: left;
-
-            }
-
-            #Pacotes a:link{
-
-              text-decoration: underline;
-              color: blue;
-
-
-            }
-
-            #Atualização {
-
-              width: 40%;
-              height: 500px;
-              background-color: #2d2d5c;
-              padding-left: 60px;
-              padding-right: 60px;
-              margin-top: 10px;
-              float: left;
-            }
-
-            #Programas {
-
-              width: 30%;
-              height: 500px;
-              margin-top: 10px;
-              padding-left: 60px;
-              padding-right: 60px;
-              float: left;
-              background-color: #2d2d5c;
-            }
-
-            #Programas2 {
-
-              width: 55%;
-
-              height: 500px;
-
-              float: left;
-
-              background-color: #2d2d5c;
-
-            }
-
-            #Programas2Texto {
-
-              width: 100%;
-              height: 40%;
-
-              padding-top: 20px;
-              padding-left: 20px;
-              padding-right: 20px;
-
-            }
-
-            #Programas2Texto p {
-
-              font-size: 18px;
-            }
-
-
-            #Programas2Imagem {
-
-              width: 100%;
-              height: 60%;
-              background-color: black;
-
-            }
-
-
-            #Programas2Imagem2 {
-
-              width: 45%;
-
-              height: 500px;
-
-              float: right;
-
-              background-color: red;
-            }
+#Linha6{
+    width: 1300px;
+    height: 600px;
+    background-color: #2d2d5c;
+}
+#AreaDeTrabalho {
+    width: 30%;
+    height: 600px;
+    float: left;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+#AreaDeTrabalhoImagem {
+	height: 300px;
+    width: 350px;
+	padding-top: 20px;
+	padding-bottom: 10px;
+    padding-left:10px;
+    padding-right:10px;
+}
+#Linha7{
+    width: 1300px;
+    height: 650px;
+    background-color: #2d2d5c;
+}
+
+/* Trabalho com Janelas */
+
+#TrabalhoComJanelas {
+    padding-left:10px;
+    padding-right:10px;
+	width: 40%;
+	height: 600px;
+	float: left;
+}
+
+#JanelasImagem {
+	height: 400px;
+    margin-top: 40px;
+}
+
+
+/* Configuração do Sistema */
+
+#ConfiguracaoDoSistema {
+	width: 350px;
+	height: 600px;
+	float: left;
+	background-color: #2d2d5c;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+#ConfiguracaoDoSistemaImagem {
+	height: 400px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+#FerramentasDoSistemaTexto {
+	width: 1200px;
+	height: 100px;
+	padding-top: 15px;
+	background-color: #2d2d5c;
+	clear: both;
+}
+
+#FerramentasDoSistemaImagem {
+    margin-top: 10px;
+    width: 1200px;
+	height: 500px;
+	background-color: mediumseagreen;
+}
+#FerramentasDoSistemaImagem img{
+    text-align: center;
+}
+#Linha8{
+    width: 1300px;
+    height: 650px;
+    background-color: #2d2d5c;
+}
+#Acessorios {
+	width: 600px;
+	height: 600px;
+	float: left;
+    margin-left: 30px;
+}
+
+#Acessorios ul {
+	color: white;
+	list-style: none;
+	text-align: center;
+	font-family: arial;
+	font-size: 18px;
+    text-align: left
+}
+
+#AcessoriosImagem {
+	height: 300px;
+	width: 400px;
+}
+
+#MenuDeAjuda {
+	width: 600px;
+	height: 600px;
+	margin-top: 10px;
+	background-color: #2d2d5c;
+	float: right;
+}
+
+#MenuDeAjudaTexto {
+	
+}
+#MenuDeAjudaTexto p {
+	text-align: left;
+}
+
+#MenuDeAjudaTexto h2 {
+	text-align: left;
+}
+
+#MenuDeAjudaImagem {
+	margin-top: 80px;
+    height: 300px;
+    width: 500px;
+}
+
+#Linha9{
+    width: 1300px;
+    height: 800px;
+    background-color: #2d2d5c;
+    
+}
+#Linha9Coluna2{
+    margin-left: 20px;
+    width: 600px;
+    height: 350px;
+    float: left;
+}
+#Linha9Coluna2Linha2{
+    margin-left: 20px;
+    width: 600px;
+    height: 300px;
+    float: left;
+}
+#GerenciamentoDeArquivos {
+	width: 250px;
+	height: 600px;
+	float: left;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#GerenciamentoDeArquivos p{
+    margin-top: 50px;
+}
+
+#GerenciamentoDeArquivosImagem {
+	width: 350px;
+	height: 600px;
+	background-color: red;
+	float: left;
+}
+
+#UsuariosEPermissoes {
+	width: 600px;
+	height: 100px;
+	background-color: #2d2d5c;
+	float: left;
+}
+
+#UsuariosEPermissoes p, #UsuariosEPermissoes2 p {
+	font-size: 17px;
+}
+
+#UsuariosEPermissoes2 {
+	width:  290px;
+    margin-right: 10px;
+	height: 300px;
+	background-color: #2d2d5c;
+	float: left;
+}
+
+#UsuariosEPermissoesImagem {
+	float: right;
+	width: 300px;
+	height: 300px;
+}
+
+
+
+
+#InicializacaoFinalizacao {
+	width: 40%;
+	height: 500px;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-top: 10px;
+	margin-top: 10px;
+	background-color: #2d2d5c;
+	clear: both;
+	float: left;
+}
+
+#InstalacaoMaquinaVirtualImagem {
+	width: 300px;
+	height: 500px;
+	margin-top: 10px;
+	background-color: blue;
+	float: left;
+}
+
+#InstalacaoMaquinaVirtual {
+	width: 35%;
+	height: 500px;
+	padding-left: 25px;
+	padding-right: 20px;
+	margin-top: 10px;
+	background-color: #2d2d5c;
+	float: right;
+}
+
+#InstalacaoMaquinaVirtual p {
+	font-size: 16px;
+}
+
+#InstalacaoMaquinaVirtual ol {
+	color: white;
+	font-family: arial;
+}
+
+#InstalacaoMaquinaVirtual h2 {
+	font-size: 28px;
+}
+#Linha10{
+    width: 1300px;
+    height: 600px;
+    background-color: #2d2d5c;
+}
+#Linha11{
+    width: 1300px;
+    height: 600px;
+    background-color: #2d2d5c;
+}
+#Pacotes {
+	width: 400px;
+	height: 500px;
+	clear: both;
+	float: left;
+    margin-left: 30px;
+    padding-left: 40px;
+    padding-right: 40px;   
+}
+
+#Pacotes a:link {
+	text-decoration: underline;
+	color: blue;
+}
+
+#Atualização {
+	width: 400px;
+	height: 500px;
+	background-color: #2d2d5c;
+	float: left;
+    margin-left: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#Programas {
+	width: 400px;
+	height: 500px;
+    margin-left: 30px;
+    padding-left: 20px;
+    padding-right: 20px; 
+	float: left;
+	background-color: #2d2d5c;
+}
+#Linha12{
+    width: 1300px;
+    height: 500px;
+	background-color: #2d2d5c;
+}
+
+#Programas2 {
+	width: 55%;
+	height: 500px;
+	float: left;
+	background-color: #2d2d5c;
+}
+
+#Programas2Texto {
+	width: 100%;
+	height: 40%;
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+#Programas2Texto p {
+	font-size: 18px;
+}
+
+#Programas2Imagem {
+	width: 700px;
+	height: 300px;
+	background-color: black;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+#Programas2Imagem img{
+    width: inherit;
+    height: inherit;
+}
+#Programas2Imagem2 {
+	width: 550px;
+	height: 500px;
+    margin-right: 20px;
+	float: right;
+	background-color: red;
+}
+#Programas2Imagem2 img{
+    width: inherit;
+    height: inherit;
+}
 
   /* rodapé */
 
