--- a/Style/Topico3.css
+++ b/Style/Topico3.css
@@ -1,5 +1,4 @@
 /* CSS RESET*/
-
 *{
     margin: 0px;
     padding: 0px;
@@ -9,17 +8,26 @@
 
 @font-face{
   font-family: Blocks;
-  src: url(../Fonts/Topico1/VCR.ttf);
+  src: url(../Fonts/VCR.ttf);
 }
 
 /* regras globais */
 
 #body {
-  background-image: url(../images/blackWallpaper.jpg);
-  background-repeat: no-repeat;
+  background-image: url();
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  background-repeat: none;
+}
+
+#image{
+    background-image: url(../images/fundo2.jfif);
+    background-attachment: fixed;
+    background-position: center;
+}
+
+#image2{
+    background-image: url(../images/fundo4.jpg);
+    background-position: center; 
 }
 
 a {
@@ -29,9 +37,12 @@ a {
 a:visited, a:link, a:active {
   color: inherit;
 }
+#title {
+    margin-bottom: 30px;
+}
 
-h1, h2{
-
+h1{
+  
   font-size: 50px;
   font-weight: bold;
   text-align: center;
@@ -40,20 +51,20 @@ h1, h2{
 }
 
 h2{
-
   font-size: 30px;
-
+  text-align: left;
+  color:white;  
+  border-bottom: 2px solid white;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 p{
 
-  font-size: 20px;
-
+  font-size: 18.5px;
   font-family: arial;
-
-  text-align: center;
-
   color: white;
+  text-align: justify;
 
 }
 
@@ -68,39 +79,60 @@ p{
 
 /* padrões */
 .Conteudo {
-    width: 1300px;
+    width: 100%;
     height: inherit;
     margin-left: auto;
     margin-right: auto;
 }
 
 .CenterOBJ {
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
-/*--Partes do site*/
+/*--Conteudo*/
 
 /* -Header- */
 
 #Header {
     width: 100%;
     height: 160px;
-    background-color: rgba(0, 159, 187, 0.9);
+    background-color: rgba(0, 159, 187, 0.7);
+    justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+    #Header {
+        width: 100%;
+        height: 310px;
+        margin-bottom: 20px;
+    }
+    
+    #Header_Menus {
+        height: 90px;
+        width: 100%;
+        border: solid 2px black;
+    }
+    #Conteudo {
+        justify-content: center;
+    }
+    
 }
 
 #Header_logo {
     height: 156px;
-    width: 710px;
+    width: 50%;
     float: left;
-    clear: both;
+    clear: both; 
     padding-top: 10px;
 }
 
 #Header_LogoIMG {
-    height: 140px;
+    height: 100%;
     width: 350px;
-    margin-left: 350px;
+    margin-left: 50%;
+    left: 0;
 }
 
 #Header_Menus {
@@ -109,7 +141,6 @@ p{
     float: right;
     margin-top: 45px;
     border: solid 2px black;
-    background-color: gray;
 }
 
 #OnSite {
@@ -158,403 +189,57 @@ p{
 .Menu:active {
   background-color: rgb(95, 95, 95);
 }
+/*
+Propriedade "Display:"
 
+Valores:
+    - block: elemento aparece como se fosse bloco;
+    - inline: elemento aparece como se fosse em linha;
+    - none: elemento não aparece;
+*/
+#Main_content{
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+.Title{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px; 27, 3, 54
+    padding-bottom: 20px;
+    -webkit-text-stroke-color: rgba(0, 159, 187, 1);
+    text-shadow: 10px 10px 75px rgba(100, 159, 187, 1);
+}
+ 
+/*lists*/
+.li_ul{
+    list-style-type: "-";
+    font-size: 17.26px;
+    font-family: arial;
+    text-align: left;
+    color: white;
+    margin-left: 3% ;
+    line-height: 1.5;
+}
+
+ul{
+    top: 0;
+}
+/*lists*/
+
+
+
+#hr{
+    width: 100%;
+    background-color: white;
+    height: 3px;
+}
+
+.images{
+    width: 33.3; 
+}
 /* conteudo */
-
-/* Modo Gráfico */
-
-  #ModoGraficoTexto {
-
-    width: 30%;
-
-    height: 500px;
-
-    background-color: rgba(86, 86, 86, 0.5);
-
-    padding-left: 60px;
-
-    padding-right: 60px;
-
-    clear: both;
-
-    float: left;
-
-  }
-
-
-  #ModoGraficoTexto p{
-
-    font-size: 25px;
-
-  }
-
-    #ModoGraficoImagem{
-
-      width: 70%;
-
-      height: 500px;
-
-    background-color: chartreuse;
-
-    float: right;
-
-    }
-
-    /* Área de Trabalho */
-
-    #AreaDeTrabalho {
-
-      width: 30%;
-      height: 600px;
-      float: left;
-      padding-top: 25px;
-      margin-top: 10px;
-      background-color: rgba(128, 121, 121, 0.5);
-
-    }
-
-    #AreaDeTrabalhoImagem {
-
-      height: 368px;
-      padding-top: 20px;
-      padding-bottom: 10px;
-
-    }
-
-      /* Trabalho com Janelas */
-
-      #TrabalhoComJanelas {
-
-        width: 40%;
-        height: 600px;
-        padding-top: 25px;
-        margin-top: 10px;
-        float: left;
-        background-color: rgba(151, 149, 149, 0.5);
-
-      }
-
-
-      #JanelasImagem {
-
-        height: 438px;
-        padding-top: 50px;
-        padding-bottom: 10px;
-
-      }
-
-        /* Configuração do Sistema */
-
-        #ConfiguracaoDoSistema {
-
-          width: 30%;
-          height: 600px;
-          padding-top: 25px;
-          margin-top: 10px;
-          float: left;
-          background-color:  rgba(128, 121, 121, 0.5);
-        }
-
-        #ConfiguracaoDoSistemaImagem {
-
-          height: 390px;
-          padding-bottom: 10px;
-          padding-top: 10px;
-        }
-
-          #FerramentasDoSistemaTexto {
-
-            width: 100%;
-            height: 100px;
-            padding-top: 15px;
-            background-color: rgba(151, 149, 149, 0.5);
-            clear: both;
-
-          }
-
-            #FerramentasDoSistemaImagem {
-
-            width: 100%;
-            height: 500px;
-            background-color: mediumseagreen;
-
-
-          }
-
-            #Acessorios{
-
-              width: 45%;
-              height: 600px;
-              padding-top: 10px;
-              margin-top: 10px;
-              background-color: rgba(206, 206, 206, 0.5);
-                float: left;
-
-            }
-
-            #Acessorios ul{
-
-
-              color: white;
-
-              list-style: none;
-
-              text-align: center;
-
-              font-family: arial;
-
-              font-size: 18px;
-
-
-            }
-
-            #AcessoriosImagem {
-
-              height: 315px;
-              width: 100%;
-              padding-top: 20px;
-
-            }
-
-            #MenuDeAjuda {
-
-              width: 55%;
-              height: 600px;
-              margin-top: 10px;
-              background-color: rgba(183, 183, 183, 0.5);
-              float: right;
-            }
-
-          #MenuDeAjudaTexto{
-            padding-left: 15px;
-
-          }
-
-          #MenuDeAjudaTexto p{
-              text-align: left;
-            }
-
-          #MenuDeAjudaTexto h2{
-              text-align: left;
-            }
-
-
-
-            #MenuDeAjudaImagem {
-
-              height: 455px;
-              padding-top: 30px;
-
-            }
-
-            #GerenciamentoDeArquivos {
-
-              width: 20%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: rgba(206, 206, 206, 0.5);
-              float: left;
-            }
-
-            #GerenciamentoDeArquivosImagem {
-
-              width:20%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: red;
-              float: left;
-
-
-            }
-
-
-            #UsuariosEPermissoes {
-
-              width: 60%;
-              height: 250px;
-              padding-left: 20px;
-              padding-right: 20px;
-              margin-top: 10px;
-              background-color: rgba(119, 110, 110, 0.5);
-              float: right;
-            }
-
-            #UsuariosEPermissoes p, #UsuariosEPermissoes2 p{
-
-              font-size: 17px;
-
-            }
-
-            #UsuariosEPermissoes2 {
-
-              width: 35%;
-              height: 250px;
-              padding-top: 10px;
-              padding-left: 30px;
-              padding-right: 30px;
-              background-color: rgba(86, 84, 84, 0.5);
-              float: left;
-
-            }
-
-            #UsuariosEPermissoesImagem {
-
-              float: right;
-              width: 25%;
-              height: 250px;
-
-            }
-
-            #InicializacaoFinalizacao {
-
-              width: 40%;
-              height: 500px;
-              padding-left: 40px;
-              padding-right: 40px;
-              padding-top: 10px;
-              margin-top: 10px;
-              background-color: rgba(160, 160, 160, 0.5);
-              clear: both;
-              float: left;
-
-            }
-
-            #InstalacaoMaquinaVirtualImagem {
-
-              width: 25%;
-              height: 500px;
-              margin-top: 10px;
-              background-color: blue;
-              float: left;
-
-            }
-
-
-
-            #InstalacaoMaquinaVirtual {
-
-              width: 35%;
-              height: 500px;
-              padding-left: 25px;
-              padding-right: 20px;
-              margin-top: 10px;
-              background-color:  rgba(160, 160, 160, 0.5);
-              float: right;
-            }
-
-            #InstalacaoMaquinaVirtual p{
-
-              font-size: 16px;
-
-            }
-
-            #InstalacaoMaquinaVirtual ol{
-
-
-              color: white;
-
-              font-family: arial;
-
-
-            }
-
-            #InstalacaoMaquinaVirtual h2{
-
-              font-size: 28px;
-            }
-
-
-            #Pacotes{
-
-              width: 30%;
-              height: 500px;
-              background-color:  rgba(71, 71 71, 0.5);
-              padding-left: 70px;
-              padding-right: 70px;
-              margin-top: 10px;
-              clear: both;
-              float: left;
-
-            }
-
-            #Pacotes a:link{
-
-              text-decoration: underline;
-              color: blue;
-
-
-            }
-
-            #Atualização {
-
-              width: 40%;
-              height: 500px;
-              background-color: rgba(119, 110, 110, 0.5);
-              padding-left: 60px;
-              padding-right: 60px;
-              margin-top: 10px;
-              float: left;
-            }
-
-            #Programas {
-
-              width: 30%;
-              height: 500px;
-              margin-top: 10px;
-              padding-left: 60px;
-              padding-right: 60px;
-              float: left;
-              background-color: rgba(71, 71 71, 0.5);
-            }
-
-            #Programas2 {
-
-              width: 55%;
-
-              height: 500px;
-
-              float: left;
-
-              background-color: rgba(168, 168, 168, 0.5);
-
-            }
-
-            #Programas2Texto {
-
-              width: 100%;
-              height: 40%;
-
-              padding-top: 20px;
-              padding-left: 20px;
-              padding-right: 20px;
-
-            }
-
-            #Programas2Texto p {
-
-              font-size: 18px;
-            }
-
-
-            #Programas2Imagem {
-
-              width: 100%;
-              height: 60%;
-              background-color: black;
-
-            }
-
-
-            #Programas2Imagem2 {
-
-              width: 45%;
-
-              height: 500px;
-
-              float: right;
-
-              background-color: red;
-            }
 
   /* rodapé */
 
@@ -562,7 +247,6 @@ p{
     width: 100%;
     height: 200px;
     background-color: rgba(0, 159, 187, 0.7);
-
     clear: both;
 }
 
@@ -570,7 +254,7 @@ p{
     height: 200px;
     width: 750px;
     float: left;
-    clear: both;
+    clear: both; 
     padding-top: 10px;
 }
 
@@ -612,70 +296,12 @@ p{
   width: 80px;
   border-radius: 100%;
   margin: 10px;
-  transition: 0.1s;
+  transition: 1s;
 }
 
 .User_Icon:hover {
   border: solid 4px blue;
   cursor: pointer;
 }
-#sobre {
-  height: 700px;
-  width: 1300px;
-  background-color: crimson;
-}
-/* Seção da caixa definição*/
-#CaixaDefinicao{
-  background-color: purple;
-  width:600px;
-  height:600px;
-  float: left;
-   margin-left: 20px;
-}
-#DefinicaoTexto{
-  float: left;
-  background-color: lightblue;
-  width: 300px;
-  height:450px;
-}
-#DefinicaoImagem{
-  float: left;
-  background-color: palevioletred;
-  width: 300px;
-  height:450px;
-}
 
-/*Seção da caixa História*/
-#CaixaHistoria{
-  background-color: chocolate;
-  width:  600px;
-  height: 600px;
-  float: left;
-  margin-left: 60px;
-}
-#ConteudoHistoria{
- height: inherit;
- width: inherit;
- background-color: cyan;
 
-}
-.Coluna1Titulo{
-  text-align: left;
-  margin-bottom: 20px;
-}
-#HistoriaTexto{
-  float: left;
-  height: 540px;
-  width:400px;
-  background-color: cyan;
-}
-#HistoriaImagens{
-  float: left;
-  height: 540px;
-  width:200px;
-  background-color: chartreuse;
-}
-#LinhaConteudo2{
-  height: 600px;
-  width: 1300px;
-  background-color: olive;
