--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -15,11 +15,7 @@
 /* regras globais */
 
 #body {
-  background-image: url(../images/Topico2/Wallpaper.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+
 }
 
 a {
@@ -32,6 +28,13 @@ a:visited, a:link, a:active {
 .FullIMG{
     width: inherit;
     height: inherit;
+}
+.backgroundImg{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    
 }
 .Espacamento{
     margin-top: 0px;
@@ -60,7 +63,7 @@ p{
 
   text-align: justify;
 
-  color: white;
+  color: #000000;
     
     margin-top: 15px; 
 }
@@ -94,7 +97,8 @@ p{
 #Header {
     width: 100%;
     height: 160px;
-    background-color: rgba(38, 80, 218, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
 }
 
 #Header_logo {
@@ -165,17 +169,24 @@ p{
 .Menu:active {
   background-color: rgb(95, 95, 95);
 }
-
+#banner{
+    width: 100%;
+    height: 1000px;
+    background-color: RGBA(13, 196, 217,0.7);
+    /*Coloca imagem de fundo*/
+    background-image: url(../images/Topico2/Wallpaper.jpg);
+    padding-top: 350px;
+}
 /* conteudo */
 #TituloPrincipal{
     margin-bottom: 60px;
     text-decoration: underline;
-    margin-top: 20px;
+    color: black;
 }
 #sobre {
     height: 750px;
     width: 1300px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
   }
   /* Seção da caixa definição*/
   #CaixaDefinicao{
@@ -240,7 +251,7 @@ p{
   #LinhaConteudo2{
     height: 600px;
     width: 1300px;
-    background-color: #2d2d5c; 
+    background-color: #ffffff; 
   }
   .Linha2Colunas{
     height: 500px;
@@ -255,7 +266,7 @@ p{
   .NavegacaoImagem{
     height: 100px;
     width: 100px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
     float: left; 
     margin-left: 70px;
   }
@@ -305,7 +316,7 @@ p{
   #Linha3{
     width: 1300px;
     height: 600px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
   }
   .ColunasLinha3{
     height: 550px;
@@ -364,7 +375,7 @@ p{
   #Linha4{
     width: 1300px;
     height: 600px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
   }
   #Linha4_Texto{
     float: left;
@@ -391,12 +402,12 @@ p{
 #ModoGrafico{
     height: 600px;
     width: 1300px;
-    background-color:  #2d2d5c; 
+    background-color:  #ffffff; 
 }
 #ModoGraficoTexto {
     width: 30%;
     height: 500px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
     padding-left: 60px;
     padding-right: 60px;
     clear: both;
@@ -426,7 +437,7 @@ p{
 #Linha6{
     width: 1300px;
     height: 600px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
 }
 #AreaDeTrabalho {
     width: 30%;
@@ -447,7 +458,7 @@ p{
 #Linha7{
     width: 1300px;
     height: 650px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
 }
 
 /* Trabalho com Janelas */
@@ -472,7 +483,7 @@ p{
 	width: 350px;
 	height: 600px;
 	float: left;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
     padding-left:10px;
     padding-right:10px;
 }
@@ -487,7 +498,7 @@ p{
 	width: 1200px;
 	height: 100px;
 	padding-top: 15px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	clear: both;
 }
 
@@ -503,7 +514,7 @@ p{
 #Linha8{
     width: 1300px;
     height: 650px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
 }
 #Acessorios {
 	width: 600px;
@@ -530,7 +541,7 @@ p{
 	width: 600px;
 	height: 600px;
 	margin-top: 10px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	float: right;
 }
 
@@ -554,7 +565,7 @@ p{
 #Linha9{
     width: 1300px;
     height: 800px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
     
 }
 #Linha9Coluna2{
@@ -590,7 +601,7 @@ p{
 #UsuariosEPermissoes {
 	width: 600px;
 	height: 100px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	float: left;
 }
 
@@ -602,7 +613,7 @@ p{
 	width:  290px;
     margin-right: 10px;
 	height: 300px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	float: left;
 }
 
@@ -622,7 +633,7 @@ p{
 	padding-right: 40px;
 	padding-top: 10px;
 	margin-top: 10px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	clear: both;
 	float: left;
 }
@@ -641,7 +652,7 @@ p{
 	padding-left: 25px;
 	padding-right: 20px;
 	margin-top: 10px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	float: right;
 }
 
@@ -660,12 +671,12 @@ p{
 #Linha10{
     width: 1300px;
     height: 600px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
 }
 #Linha11{
     width: 1300px;
     height: 500px;
-    background-color: #2d2d5c;
+    background-color: #ffffff;
 }
 #Pacotes {
 	width: 400px;
@@ -685,7 +696,7 @@ p{
 #Atualizacao {
 	width: 400px;
 	height: 500px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 	float: left;
     margin-left: 20px;
     padding-left: 10px;
@@ -699,19 +710,19 @@ p{
     padding-left: 20px;
     padding-right: 20px; 
 	float: left;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 }
 #Linha12{
     width: 1300px;
     height: 500px;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 }
 
 #Programas2 {
 	width: 500px;
 	height: 500px;
 	float: left;
-	background-color: #2d2d5c;
+	background-color: #ffffff;
 }
 
 #Programas2Texto {
